CHANGELOG:
v1.17.2
  - Deactivated tests to appease CRAN.
v1.17.1
  - Coercion from an edgelist could fail with a single edge when redundant edges were being removed.
  - Zero-row matrices are now assumed to be empty edgelists when not explicitly specified.  (Before, they just failed.)
v1.17
  - Michal Bojanowski, Pavel N. Krivitsky, Chad Klumb, and Brendan Knapp have been added as contributors.
  - summary.character() and print.summary.character() are no longer exported as it interfered with base::summary.data.frame().
  - Added functions as.network.data.frame and as.data.frame.network for converting between data.frames and networks.
  - as.tibble.network and as_tibble.network now optionally return edge IDs, controlled with the store.eid argument
  - Fixes to read.paj().
  - Various testthat improvements.
  - Bugs fixed in mixingmatrix.network().
  - Updated tests for compatibility with R 4.0
  - Converted is.bipartite, is.directed, get.edge.attribute, get.edge.value, get.network.attribute, list.edge.attributes, list.network.attributes, set.vertex.attribute, set.edge.attribute, set.edge.value, set.network.attribute, delete.vertex.attribute, delete.edge.attribute, delete.network.attribute, has.vertex.attribute, has.edge.attribute, and has.network.attribute to generics for greater extensibility.
  - Using an out-of-bounds index in nw[i,j] and nw[i,j]<- now produces a sensible error message (i.e., same one as for a matrix).
  - mixingmatrix() now produces output inheriting from "table" rather than a list; its printing, handling of missing attributes, bipartite networks, and other scenarios has been improved.
  - as.mixingmatrix() has been added.
  - network now uses statnet::statnetStartupMessage().
  - Updated constructor code per Kurt Hornik's suggestion to future proof versus upcoming sapply() changes.