@@ -1,6 +1,7 @@
 CHANGELOG:
 v1.17.2
   - Deactivated tests to appease CRAN.
+  - Modified various protection calls in a hopefully more conservative manner.  This should not produce user-visible changes, but will be cleaner on rchk.
 v1.17.1
   - Coercion from an edgelist could fail with a single edge when redundant edges were being removed.
   - Zero-row matrices are now assumed to be empty edgelists when not explicitly specified.  (Before, they just failed.)
